fixed search bar z-index issue

--- a/react-app/src/components/SidePanel/SidePanel.css
+++ b/react-app/src/components/SidePanel/SidePanel.css
@@ -7,12 +7,13 @@
 
 }
 .sidepanel-banner-cover{
-  height: 80px;
+  height:1px;
   background-color: #ffffff;
   width: 100%;
   position: relative;
 
 }
+
 
 .sidepanel-staff-picks-header{
   height: 80px;
