--- a/react-app/src/components/SigninModal/SigninModal.css
+++ b/react-app/src/components/SigninModal/SigninModal.css
@@ -5,7 +5,7 @@
 
 
 .signin-form-page-container {
-  z-index: 1000000;
+  z-index: 10000000000000;
   background-color: white;
   padding: 20px;
   border-radius: 2px;
